fix: change global scrollbar style

--- a/src/components/Event/EventTimeline/EventTimeline.module.scss
+++ b/src/components/Event/EventTimeline/EventTimeline.module.scss
@@ -19,20 +19,6 @@
       position: relative;
       overflow-y: auto;
       padding-bottom: 0.75rem;
-      &::-webkit-scrollbar {
-        height: 0.5rem;
-      }
-      &::-webkit-scrollbar-track {
-        background: none;
-      }
-      &::-webkit-scrollbar-thumb {
-        transition: $transition;
-        background: #c3c3c3;
-        border-radius: 10rem;
-        &:hover {
-          background: #a8a5a5;
-        }
-      }
     }
     &-content {
       background: $white;
